RESULTS/AutoSpec/raw_results/out-4o-nla/19_0002/19_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/19_0002/19_merged.c:17:126: error: unterminated comment
   17 |     loop invariant x == \sum(0, c-1, (\lambda integer i; (i+1)*(i+1)*(i+1)*(i+1)*(i+1))) /* summation of (i+1)^5 */;
      |                                                                                                                              ^
